Revert "fix typo"
This reverts commit 59f4e90af284dfeba5ce7e24a58ca5eb5ba9ff31.

--- a/data/red/settings.json
+++ b/data/red/settings.json
@@ -5,7 +5,7 @@
     "PREFIXES" : [
         ";"
     ],
-    "TOKEN" : "MzA5NjIyMDY2NjY2Mjc0ODE4.Db9TXw.SG8lin82UZTyD8tf5bFnpyKc5ps",
+    "TOKEN" : null,
     "default" : {
         "ADMIN_ROLE" : "Lazy Cat",
         "MOD_ROLE" : "Bot Commander",
